# LMDrive

./: .gitignore  lmdrive_instruction_dataset_analysis.md  pyproject.toml  requirements-working-wsl.txt  run_lmdrive_ubuntu.sh  run_lmdrive_wsl.sh  start_carla_windows.ps1  use_cuda_11_8.sh
LAVIS/: requirements.txt
instruction_test/: README.md  command_catalog.py  instruction_dict.json  interactive_lmdriver_agent.py  interactive_lmdriver_config.py  junction_topology.py  native_lmdrive_runtime.py  raw_instruction_evaluator.py  run_instruction_test.sh  standalone_client.py  terminal_commands.py
instruction_test/tests/: test_command_catalog.py  test_interactive_agent_unit.py  test_standalone_client_unit.py
leaderboard/team_code/: lmdriver_config.py
scenario_runner/: requirements.txt
vision_encoder/: requirements.txt
