[project]
name = "lmdrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torch-scatter",
    "pyyaml>=6.0.3",
    "scikit-image>=0.21.0",
    "opencv-python==4.2.0.32",
    "tqdm>=4.68.4",
    "setuptools>=75.3.4",
    "contexttimer>=0.3.3",
    "decord>=0.6.0",
    "diffusers<=0.16.0",
    "einops>=0.4.1",
    "fairscale==0.4.4",
    "ftfy>=6.2.0",
    "iopath>=0.1.10",
    "ipython>=8.12.3",
    "omegaconf>=2.3.1",
    "opencv-python-headless==4.5.5.64",
    "opendatasets>=0.1.22",
    "packaging>=24.2",
    "pandas>=2.0.3",
    "plotly>=6.8.0",
    "pre-commit>=3.5.0",
    "pycocoevalcap>=1.2",
    "pycocotools>=2.0.7",
    "python-magic>=0.4.27",
    "sentencepiece>=0.2.0",
    "spacy>=3.7.5",
    "streamlit>=1.40.1",
    "transformers>=4.28.0",
    "webdataset>=0.2.100",
    "peft>=0.13.2",
    "ninja>=1.13.0",
    "wheel>=0.45.1",
    "dictor>=0.1.12",
    "requests>=2.32.4",
    "pygame>=2.6.1",
    "tabulate>=0.9.0",
    "py-trees>=0.8.3",
    "networkx>=2.2",
    "shapely>=1.6.4.post2",
    "psutil>=7.2.2",
    "xmlschema>=1.0.18",
    "ephem>=4.2.1",
    "numpy>=1.24.4",
    "matplotlib>=3.7.5",
    "six>=1.17.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" },
]
torchvision = [
    { index = "pytorch-cu118" },
]
torch-scatter = [
    { index = "pyg-cu118" },
]

# PyPI Package
[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

# PyTorch CUDA 11.8
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu118/"
format = "flat"
explicit = true

# PyG CUDA 11.8
[[tool.uv.index]]
name = "pyg-cu118"
url = "https://data.pyg.org/whl/torch-2.0.1+cu118.html"
format = "flat"
explicit = true
